--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <main>
 
 
-        <div id="elenco" class="hidden">
-          prova
-        </div>
+        <ul id="elenco">
+
+        </ul>
       </main>
 
     </div>
