--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       </header>
 
       <div class="bottone">
-        <button id="button" type="button" name="button">LISTA</button>
+        <button id="button" class="my-btn" type="button" name="button"></button>
+
+        <button id="delete" class="my-btn-V2" type="button" name="button"></button>
       </div>
 
 
-      <main>
-
-
+      <main id="visible" class="hide">
         <ul id="elenco">
 
         </ul>
